tests/fixtures/syntax/invalid/empty_not_block.repor
case "empty not block" {
  $ true
  assert {
    not {
    }
  }
}
